--- a/YHP_website/pom.xml
+++ b/YHP_website/pom.xml
@@ -14,6 +14,11 @@
       <version>3.8.1</version>
       <scope>test</scope>
     </dependency>
+    <dependency>
+    	<groupId>org.json</groupId>
+    	<artifactId>json</artifactId>
+    	<version>20160810</version>
+    </dependency>
   </dependencies>
   <build>
     <finalName>YHP_website</finalName>
