--- a/YHP_website/pom.xml
+++ b/YHP_website/pom.xml
@@ -11,13 +11,18 @@
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
-      <version>3.8.1</version>
+      <version>4.12</version>
       <scope>test</scope>
     </dependency>
     <dependency>
     	<groupId>org.json</groupId>
     	<artifactId>json</artifactId>
     	<version>20160810</version>
+    </dependency>
+    <dependency>
+    	<groupId>javax.servlet</groupId>
+    	<artifactId>javax.servlet-api</artifactId>
+    	<version>3.1.0</version>
     </dependency>
   </dependencies>
   <build>
