--- a/YHP_website/src/main/webapp/WEB-INF/web.xml
+++ b/YHP_website/src/main/webapp/WEB-INF/web.xml
@@ -4,4 +4,14 @@
 
 <web-app>
   <display-name>Archetype Created Web Application</display-name>
+  <servlet>
+  	<servlet-name>ExampleServlet</servlet-name>
+  	<display-name>ExampleServlet</display-name>
+  	<description></description>
+  	<servlet-class>com.example.servlets.ExampleServlet</servlet-class>
+  </servlet>
+  <servlet-mapping>
+  	<servlet-name>ExampleServlet</servlet-name>
+  	<url-pattern>/ExampleServlet</url-pattern>
+  </servlet-mapping>
 </web-app>
