--- a/YHP_website/pom.xml
+++ b/YHP_website/pom.xml
@@ -24,6 +24,11 @@
     	<artifactId>javax.servlet-api</artifactId>
     	<version>3.1.0</version>
     </dependency>
+    <dependency>
+    	<groupId>org.apache.tomcat</groupId>
+    	<artifactId>tomcat-catalina</artifactId>
+    	<version>9.0.0.M15</version>
+    </dependency>
   </dependencies>
   <build>
     <finalName>YHP_website</finalName>
