--- a/YHP_website/src/main/webapp/WEB-INF/web.xml
+++ b/YHP_website/src/main/webapp/WEB-INF/web.xml
@@ -14,4 +14,9 @@
   	<servlet-name>ExampleServlet</servlet-name>
   	<url-pattern>/ExampleServlet</url-pattern>
   </servlet-mapping>
+  <resource-ref>
+  	<res-ref-name>jdbc/test</res-ref-name>
+  	<res-type>javax.sql.DataSource</res-type>
+  	<res-auth>Container</res-auth>
+  </resource-ref>
 </web-app>
