--- a/YHP_website/src/main/webapp/WEB-INF/web.xml
+++ b/YHP_website/src/main/webapp/WEB-INF/web.xml
@@ -15,7 +15,7 @@
   	<url-pattern>/ExampleServlet</url-pattern>
   </servlet-mapping>
   <resource-ref>
-  	<res-ref-name>jdbc/test</res-ref-name>
+  	<res-ref-name>jdbc/postgres</res-ref-name>
   	<res-type>javax.sql.DataSource</res-type>
   	<res-auth>Container</res-auth>
   </resource-ref>
