--- a/YHP_website/src/main/webapp/WEB-INF/web.xml
+++ b/YHP_website/src/main/webapp/WEB-INF/web.xml
@@ -18,5 +18,6 @@
   	<res-ref-name>jdbc/postgres</res-ref-name>
   	<res-type>javax.sql.DataSource</res-type>
   	<res-auth>Container</res-auth>
+  	<res-sharing-scope>Shareable</res-sharing-scope>
   </resource-ref>
 </web-app>
