--- a/YHP_website/src/main/webapp/WEB-INF/web.xml
+++ b/YHP_website/src/main/webapp/WEB-INF/web.xml
@@ -5,15 +5,38 @@
 <web-app>
   <display-name>Archetype Created Web Application</display-name>
   <servlet>
-  	<servlet-name>ExampleServlet</servlet-name>
-  	<display-name>ExampleServlet</display-name>
+  	<servlet-name>Products</servlet-name>
+  	<display-name>Products</display-name>
   	<description></description>
-  	<servlet-class>com.example.servlets.ExampleServlet</servlet-class>
+  	<servlet-class>servlets.ProductsServlet</servlet-class>
+  </servlet>
+  <servlet>
+  	<servlet-name>AccountServlet</servlet-name>
+  	<display-name>AccountServlet</display-name>
+  	<description></description>
+  	<servlet-class>servlets.AccountServlet</servlet-class>
+  </servlet>
+  <servlet>
+  	<servlet-name>OrderServlet</servlet-name>
+  	<display-name>OrderServlet</display-name>
+  	<description></description>
+  	<servlet-class>servlets.OrderServlet</servlet-class>
   </servlet>
   <servlet-mapping>
-  	<servlet-name>ExampleServlet</servlet-name>
-  	<url-pattern>/ExampleServlet</url-pattern>
+  	<servlet-name>Products</servlet-name>
+  	<url-pattern>/Products</url-pattern>
   </servlet-mapping>
+  <servlet-mapping>
+  	<servlet-name>AccountServlet</servlet-name>
+  	<url-pattern>/Account</url-pattern>
+  </servlet-mapping>
+  <servlet-mapping>
+  	<servlet-name>OrderServlet</servlet-name>
+  	<url-pattern>/Order</url-pattern>
+  </servlet-mapping>
+  <welcome-file-list>
+  	<welcome-file>Products</welcome-file>
+  </welcome-file-list>
   <resource-ref>
   	<res-ref-name>jdbc/postgres</res-ref-name>
   	<res-type>javax.sql.DataSource</res-type>
