#3: added database table class with demo code

--- a/YHP_website/src/main/webapp/WEB-INF/web.xml
+++ b/YHP_website/src/main/webapp/WEB-INF/web.xml
@@ -38,7 +38,7 @@
   	<welcome-file>Products</welcome-file>
   </welcome-file-list>
   <resource-ref>
-  	<res-ref-name>jdbc/postgres</res-ref-name>
+  	<res-ref-name>jdbc/YHP</res-ref-name>
   	<res-type>javax.sql.DataSource</res-type>
   	<res-auth>Container</res-auth>
   	<res-sharing-scope>Shareable</res-sharing-scope>
