--- a/YHP_website/src/main/webapp/WEB-INF/web.xml
+++ b/YHP_website/src/main/webapp/WEB-INF/web.xml
@@ -22,6 +22,18 @@
   	<description></description>
   	<servlet-class>servlets.OrderServlet</servlet-class>
   </servlet>
+  <servlet>
+  	<servlet-name>AddProductToOrderServlet</servlet-name>
+  	<display-name>AddProductToOrderServlet</display-name>
+  	<description></description>
+  	<servlet-class>servlets.AddProductToOrderServlet</servlet-class>
+  </servlet>
+  <servlet>
+  	<servlet-name>RemoveProductFromOrderServlet</servlet-name>
+  	<display-name>RemoveProductFromOrderServlet</display-name>
+  	<description></description>
+  	<servlet-class>servlets.RemoveProductFromOrderServlet</servlet-class>
+  </servlet>
   <servlet-mapping>
   	<servlet-name>Products</servlet-name>
   	<url-pattern>/Products</url-pattern>
@@ -33,6 +45,14 @@
   <servlet-mapping>
   	<servlet-name>OrderServlet</servlet-name>
   	<url-pattern>/Order</url-pattern>
+  </servlet-mapping>
+  <servlet-mapping>
+  	<servlet-name>AddProductToOrderServlet</servlet-name>
+  	<url-pattern>/AddProductToOrder</url-pattern>
+  </servlet-mapping>
+  <servlet-mapping>
+  	<servlet-name>RemoveProductFromOrderServlet</servlet-name>
+  	<url-pattern>/RemoveProductFromOrder</url-pattern>
   </servlet-mapping>
   <welcome-file-list>
   	<welcome-file>Products</welcome-file>
