--- a/YHP_website/src/main/webapp/WEB-INF/web.xml
+++ b/YHP_website/src/main/webapp/WEB-INF/web.xml
@@ -4,6 +4,9 @@
 
 <web-app>
   <display-name>Archetype Created Web Application</display-name>
+  <listener>
+  	<listener-class>listener.DatabaseCloser</listener-class>
+  </listener>
   <servlet>
   	<servlet-name>Products</servlet-name>
   	<display-name>Products</display-name>
@@ -34,6 +37,12 @@
   	<description></description>
   	<servlet-class>servlets.RemoveProductFromOrderServlet</servlet-class>
   </servlet>
+  <servlet>
+  	<servlet-name>AdminServlet</servlet-name>
+  	<display-name>AdminServlet</display-name>
+  	<description></description>
+  	<servlet-class>servlets.AdminServlet</servlet-class>
+  </servlet>
   <servlet-mapping>
   	<servlet-name>Products</servlet-name>
   	<url-pattern>/Products</url-pattern>
@@ -53,6 +62,10 @@
   <servlet-mapping>
   	<servlet-name>RemoveProductFromOrderServlet</servlet-name>
   	<url-pattern>/RemoveProductFromOrder</url-pattern>
+  </servlet-mapping>
+  <servlet-mapping>
+  	<servlet-name>AdminServlet</servlet-name>
+  	<url-pattern>/Admin</url-pattern>
   </servlet-mapping>
   <welcome-file-list>
   	<welcome-file>Products</welcome-file>
