fixed issue with maven defaulting to using java 1.5

--- a/YHP_website/pom.xml
+++ b/YHP_website/pom.xml
@@ -28,4 +28,8 @@
   <build>
     <finalName>YHP_website</finalName>
   </build>
+  <properties>
+  	<maven.compiler.source>1.8</maven.compiler.source>
+  	<maven.compiler.target>1.8</maven.compiler.target>
+  </properties>
 </project>
