--- a/YHP_website/src/main/webapp/WEB-INF/web.xml
+++ b/YHP_website/src/main/webapp/WEB-INF/web.xml
@@ -5,8 +5,8 @@
 <web-app>
   <display-name>Archetype Created Web Application</display-name>
   <servlet>
-  	<servlet-name>Products</servlet-name>
-  	<display-name>Products</display-name>
+  	<servlet-name>ProductsServlet</servlet-name>
+  	<display-name>ProductsServlet</display-name>
   	<description></description>
   	<servlet-class>servlets.ProductsServlet</servlet-class>
   </servlet>
@@ -41,7 +41,7 @@
   	<servlet-class>servlets.AdminServlet</servlet-class>
   </servlet>
   <servlet-mapping>
-  	<servlet-name>Products</servlet-name>
+  	<servlet-name>ProductsServlet</servlet-name>
   	<url-pattern>/Products</url-pattern>
   </servlet-mapping>
   <servlet-mapping>
@@ -73,4 +73,26 @@
   	<res-auth>Container</res-auth>
   	<res-sharing-scope>Shareable</res-sharing-scope>
   </resource-ref>
+  
+  <security-constraint>
+    <web-resource-collection>
+        <web-resource-name>my application</web-resource-name>
+        <url-pattern>/Admin</url-pattern>
+        <http-method>GET</http-method>
+        <http-method>POST</http-method>
+    </web-resource-collection>
+
+    <auth-constraint>
+        <role-name>admin</role-name>
+    </auth-constraint>
+  </security-constraint>
+
+  <login-config>
+    <auth-method>FORM</auth-method>
+    <form-login-config>
+        <form-login-page>/</form-login-page>
+        <form-error-page>/pages/loginFail.html</form-error-page>
+    </form-login-config>
+  </login-config>
+  <security-role><role-name>admin</role-name></security-role>
 </web-app>
