--- a/YHP_website/src/main/webapp/WEB-INF/web.xml
+++ b/YHP_website/src/main/webapp/WEB-INF/web.xml
@@ -86,13 +86,27 @@
         <role-name>admin</role-name>
     </auth-constraint>
   </security-constraint>
+  
+  <security-constraint>
+    <web-resource-collection>
+        <web-resource-name>my application</web-resource-name>
+        <url-pattern>/Account</url-pattern>
+        <http-method>GET</http-method>
+        <http-method>POST</http-method>
+    </web-resource-collection>
+
+    <auth-constraint>
+        <role-name>user</role-name>
+    </auth-constraint>
+  </security-constraint>
 
   <login-config>
     <auth-method>FORM</auth-method>
     <form-login-config>
-        <form-login-page>/</form-login-page>
+        <form-login-page>/pages/loginFail.html</form-login-page>
         <form-error-page>/pages/loginFail.html</form-error-page>
     </form-login-config>
   </login-config>
   <security-role><role-name>admin</role-name></security-role>
+  <security-role><role-name>user</role-name></security-role>
 </web-app>
