--- a/YHP_website/pom.xml
+++ b/YHP_website/pom.xml
@@ -24,6 +24,11 @@
     	<artifactId>tomcat-catalina</artifactId>
     	<version>9.0.0.M15</version>
     </dependency>
+    <dependency>
+	    <groupId>commons-dbutils</groupId>
+	    <artifactId>commons-dbutils</artifactId>
+	    <version>1.6</version>
+	</dependency>
   </dependencies>
   <build>
     <finalName>YHP_website</finalName>
